--- a/index.html
+++ b/index.html
@@ -4,20 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Adaobi</title>
+    <title>Adaobi Portfolio</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
     <nav class="container">
       <a href="#" class="navbar-logo">Adaobi Okoye</a>
-            </a>
-      <a href="#" class="navbar-portfolio">
-        <img src="/icons/Union.png" alt="portfolio"/>
-        <a href="#" class="navbar-about">
-        <img src="/icons/Union.png" alt="About"/>
-          <a href="#" class="navbar-contact">
-        <img src="/icons/Union.png" alt="Contact"/>
+      <a href="#" class="navbar-menu">
+        <img src="Images/Icons/Union.png" alt="Menu"/>
+      </a>
     </nav>
     </header>
     <section class="header-box">
@@ -28,62 +24,36 @@
           I can help you build a product , feature or website Look through some of my work and experience! If you like
           what you see and have a project you need coded, don’t hestiate to contact me.
         </p>
-                <div class="social">
-          <a
-            class="social-link"
-            href="#"
-            target="_blank"
-                      >
-            <img
-              class="social-icon"
-              src="/icons/github.png"
-              alt="Github"
-            />
-          </a>
-          <a
-            class="social-link"
-            href="#"
-            target="_blank"
-                      >
-            <img
-              class="social-icon"
-              src="/icons/Linkedin icon.png"
-              alt="LinkedIn"
-            />
-          </a>
-          <a
-            class="social-link"
-            href="#"
-            target="_blank"
-                     >
-            <img
-              class="social-icon"
-              src="/icons/angel list.png"
-              alt="AngelList"
-            />
-          </a>
-          <a
-            class="social-link"
-            href="#"
-            target="_blank">
-           <img
-              class="social-icon"
-              src="/icons/twitter.png"
-              alt="Twitter"
-            />
-          </a>
-          <a
-            class="social-link"
-            href="#"
-            target="_blank"
-                      >
-       <img class="social-icon"
-              src="/icons/medium.png"
-              alt="Medium"
-            />
-          </a>
-        </div>         
+        <ul class="social-media">
+          <li>
+            <a href="#" class="social-media-icon">
+              <img src="/Icons/github.png" alt="Github"/>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="social-media-icon">
+              <img src="/Icons/linked.png" alt="Linkedin"/>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="social-media-icon">
+              <img src="/icons/angel list.png" alt="Angel list"/>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="social-media-icon">
+              <img src="/Icons/twitter.png" alt="Twitter"/>
+            </a>
+          </li>
+          <li>
+            <a href="#"  class="social-media-medium-icon">
+              <img class="image-correction" src="/icons/medium.png" alt="Medium"/>
+            </a>
+          </li>
+        </ul>
       </section>
     </section>
   </body>
-</html>
+</html><!-- 
+
+
