--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="container">
       <a href="#" class="navbar-logo">Adaobi Okoye</a>
       <a href="#" class="navbar-menu">
-        <img src="Images/Icons/Union.png" alt="Menu"/>
+        <img src="/Icons/Union.png" alt="Menu"/>
       </a>
     </nav>
     </header>
@@ -32,7 +32,7 @@
           </li>
           <li>
             <a href="#" class="social-media-icon">
-              <img src="/Icons/linked.png" alt="Linkedin"/>
+              <img src="Icons/linkedin icon.png" alt="Linkedin"/>
             </a>
           </li>
           <li>
@@ -54,6 +54,4 @@
       </section>
     </section>
   </body>
-</html><!-- 
-
-
+</html> 
