--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
           </li>
           <li>
             <a href="#" class="social-media-icon">
-              <img src="Icons/linkedin icon.png" alt="Linkedin"/>
+              <img src="Icons/linkedin.png" alt="Linkedin"/>
             </a>
           </li>
           <li>
             <a href="#" class="social-media-icon">
-              <img src="/icons/angel list.png" alt="Angel list"/>
+              <img src="/icons/angel.png" alt="Angel"/>
             </a>
           </li>
           <li>
