--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="container">
       <a href="#" class="navbar-logo">Adaobi Okoye</a>
       <a href="#" class="navbar-menu">
-        <img src="/Icons/Union.png" alt="Menu"/>
+        <img src="/icons/Union.png" alt="Menu"/>
       </a>
     </nav>
     </header>
@@ -27,12 +27,12 @@
         <ul class="social-media">
           <li>
             <a href="#" class="social-media-icon">
-              <img src="/Icons/github.png" alt="Github"/>
+              <img src="/icons/github.png" alt="Github"/>
             </a>
           </li>
           <li>
             <a href="#" class="social-media-icon">
-              <img src="Icons/linkedin.png" alt="Linkedin"/>
+              <img src="icons/Linkedin.png" alt="Linkedin"/>
             </a>
           </li>
           <li>
@@ -42,7 +42,7 @@
           </li>
           <li>
             <a href="#" class="social-media-icon">
-              <img src="/Icons/twitter.png" alt="Twitter"/>
+              <img src="/icons/twitter.png" alt="Twitter"/>
             </a>
           </li>
           <li>
