--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="container">
       <a href="#" class="navbar-logo">Adaobi Okoye</a>
       <a href="#" class="navbar-menu">
-        <img src="/icons/Union.png" alt="Menu"/>
+        <img src="./icons/Union.png" alt="Menu"/>
       </a>
     </nav>
     </header>
@@ -27,27 +27,27 @@
         <ul class="social-media">
           <li>
             <a href="#" class="social-media-icon">
-              <img src="/icons/github.png" alt="Github"/>
+              <img src="./icons/github.png" alt="Github"/>
             </a>
           </li>
           <li>
             <a href="#" class="social-media-icon">
-              <img src="icons/Linkedin.png" alt="Linkedin"/>
+              <img src=".icons/Linkedin.png" alt="Linkedin"/>
             </a>
           </li>
           <li>
             <a href="#" class="social-media-icon">
-              <img src="/icons/angel.png" alt="Angel"/>
+              <img src="./icons/angel.png" alt="Angel"/>
             </a>
           </li>
           <li>
             <a href="#" class="social-media-icon">
-              <img src="/icons/twitter.png" alt="Twitter"/>
+              <img src="./icons/twitter.png" alt="Twitter"/>
             </a>
           </li>
           <li>
             <a href="#"  class="social-media-medium-icon">
-              <img class="image-correction" src="/icons/medium.png" alt="Medium"/>
+              <img class="image-correction" src="./icons/medium.png" alt="Medium"/>
             </a>
           </li>
         </ul>
