--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           </li>
           <li>
             <a href="#" class="social-media-icon">
-              <img src=".icons/Linkedin.png" alt="Linkedin"/>
+              <img src="./icons/Linkedin.png" alt="Linkedin"/>
             </a>
           </li>
           <li>
