--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Abreham Awoke</title>
+    <title>Adaobi Portfolio</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
     <nav class="container">
-      <a href="#" class="navbar-logo">John Doe</a>
+      <a href="#" class="navbar-logo">Adaobi Okoye</a>
       <a href="#" class="navbar-menu">
-        <img src="Images/Icons/Union.png" alt="Menu"/>
+        <img src="/icons/Union.png" alt="Menu"/>
       </a>
     </nav>
     </header>
     <header class="header-box">
-      <section class="header-content">
-        <h2 class="header-title">Hey There. I'm Abreham</h2>
+          <section class="header-content">
+        <h1 class="header-title">Hey There. I'm Adaobi</h1>
         <h2 class="header-subtitle">I’m a Software Developer</h2>
         <p class="header-text-description">
           I can help you build a product , feature or website Look through some of my work and experience! If you like
@@ -27,40 +27,39 @@
         <ul class="social-media">
           <li>
             <a href="#" class="social-media-icon">
-              <img src="Images/Icons/github.png" alt="Github"/>
+              <img src="/icons/github.png" alt="Github"/>
             </a>
           </li>
           <li>
             <a href="#" class="social-media-icon">
-              <img src="Images/Icons/linked.png" alt="Linkedin"/>
+              <img src="icons/Linkedin.png" alt="Linkedin"/>
             </a>
           </li>
           <li>
             <a href="#" class="social-media-icon">
-              <img src="Images/Icons/angel.png" alt="Angel"/>
+              <img src="/icons/angel.png" alt="Angel"/>
             </a>
           </li>
           <li>
             <a href="#" class="social-media-icon">
-              <img src="Images/Icons/twitter.png" alt="Twitter"/>
+              <img src="/icons/twitter.png" alt="Twitter"/>
             </a>
           </li>
           <li>
             <a href="#"  class="social-media-medium-icon">
-              <img class="image-correction" src="Images/Icons/med.png" alt="Medium"/>
+              <img class="image-correction" src="/icons/medium.png" alt="Medium"/>
             </a>
           </li>
         </ul>
-      </section>
-    </header>
-    <main>
-      <section class="recent-container">
+    </section>
+  </header>
+      <section class="new-container">
         <div class="work-container">
           <h1 class="recent-work">My Recent Works</h1>
           <hr class="about-hr">
         </div>
         <div class="image-p">
-          <img class="image-placeholder" src="Images/skeloton/placeholder.png" alt="place holder">
+          <img class="image-placeholder" src="Skeleton/placeholder.png" alt="place holder">
           <div class="multi">
            <h1 class="multi-post">Multi-Post Stories</h1>
            <p class="recent-detail">A daily selection of privately personalized reads; no accounts or sign-ups required.
@@ -75,7 +74,7 @@
            <button class="project" type="button">See Project</button>
           </div>
         </div>
-        <div class="professional">
+        <div class="professional-work">
           <div class="pro-art">
            <h1 class="art-print">Profesional Art Printing Data</h1> 
             <p class="daily-selection">A daily selection of privately personalized reads;
@@ -89,7 +88,7 @@
           </ul>
              <button class="see-proj" type="button">See Project</button>
         </div>
-        <div class="professional">
+        <div class="professional-work">
           <div class="pro-art">
            <h1 class="art-print">Profesional Art Printing Data</h1> 
             <p class="daily-selection">A daily selection of privately personalized reads;
@@ -103,7 +102,7 @@
           </ul>
              <button class="see-proj" type="button">See Project</button>
         </div>
-        <div class="professional">
+        <div class="professional-work">
           <div class="pro-art">
            <h1 class="art-print">Profesional Art Printing Data</h1> 
             <p class="daily-selection">A daily selection of privately personalized reads;
@@ -117,7 +116,7 @@
           </ul>
              <button class="see-proj" type="button">See Project</button>
         </div>
-        <div class="professional">
+        <div class="professional-work">
           <div class="pro-art">
            <h1 class="art-print">Profesional Art Printing Data</h1> 
             <p class="daily-selection">A daily selection of privately personalized reads;
@@ -131,7 +130,7 @@
           </ul>
              <button class="see-proj" type="button">See Project</button>
         </div>
-        <div class="professional">
+        <div class="professional-work">
           <div class="pro-art">
            <h1 class="art-print">Profesional Art Printing Data</h1> 
             <p class="daily-selection">A daily selection of privately personalized reads;
@@ -145,7 +144,7 @@
           </ul>
              <button class="see-proj" type="button">See Project</button>
         </div>
-        <div class="professional">
+        <div class="professional-work">
           <div class="pro-art">
            <h1 class="art-print">Profesional Art Printing Data</h1> 
             <p class="daily-selection">A daily selection of privately personalized reads;
@@ -175,7 +174,7 @@
             <div>
               <ul class="technologies">
                 <li class="tech-title font-inter">
-                  <img src="Images/skeloton/diamond.png" alt="diamond icon"/>
+                  <img src="Skeleton/diamond.png" alt="diamond"/>
                   <h5 class="text-white">Languages</h5>
                 </li>
                 <li class="tech">Javascript</li>
@@ -185,7 +184,7 @@
               </ul>
               <ul class="technologies">
                 <li class="tech-title">
-                  <img src="Images/skeloton/Rectangle.png" alt="rectangle icon"/>
+                  <img src="Skeleton/Rectangle.png" alt="rectangle"/>
                   <h5 class="text-white">Frameworks</h5>
                 </li>
                 <li class="tech">Bootstrap</li>
@@ -196,7 +195,7 @@
               </ul>
               <ul class="technologies">
                 <li class="tech-title">
-                  <img src="Images/skeloton/circle.png" alt="circle icon"/>
+                  <img src="Skeleton/circle.png" alt="circle"/>
                   <h5 class="text-white">Skills</h5>
                 </li>
                 <li class="tech">Codekitt</li>
@@ -211,3 +210,4 @@
     </main>
   </body>
 </html>
+
