--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         </ul>
     </section>
   </header>
+   <main>
       <section class="new-container">
         <div class="work-container">
           <h1 class="recent-work">My Recent Works</h1>
