--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Adaobi Portfolio</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
   </head>
   <body>
     <header>
     <nav class="container">
       <a href="#" class="navbar-logo">Adaobi Okoye</a>
       <a href="#" class="navbar-menu">
-        <img src="/icons/Union.png" alt="Menu"/>
+        <img src="./icons/Union.png" alt="Menu"/>
       </a>
     </nav>
     </header>
@@ -27,7 +28,7 @@
         <ul class="social-media">
           <li>
             <a href="#" class="social-media-icon">
-              <img src="/icons/github.png" alt="Github"/>
+              <img src="./icons/github.png" alt="Github"/>
             </a>
           </li>
           <li>
@@ -37,17 +38,17 @@
           </li>
           <li>
             <a href="#" class="social-media-icon">
-              <img src="/icons/angel.png" alt="Angel"/>
+              <img src="./icons/angel.png" alt="Angel"/>
             </a>
           </li>
           <li>
             <a href="#" class="social-media-icon">
-              <img src="/icons/twitter.png" alt="Twitter"/>
+              <img src="./icons/twitter.png" alt="Twitter"/>
             </a>
           </li>
           <li>
             <a href="#"  class="social-media-medium-icon">
-              <img class="image-correction" src="/icons/medium.png" alt="Medium"/>
+              <img class="image-correction" src="./icons/medium.png" alt="Medium"/>
             </a>
           </li>
         </ul>
@@ -176,7 +177,7 @@
               <ul class="technologies">
                 <li class="tech-title font-inter">
                   <img src="Skeleton/diamond.png" alt="diamond"/>
-                  <h5 class="text-white">Languages</h5>
+                  <div class="text-white">Languages</div>
                 </li>
                 <li class="tech">Javascript</li>
                 <li class="tech">Ruby</li>
@@ -186,7 +187,7 @@
               <ul class="technologies">
                 <li class="tech-title">
                   <img src="Skeleton/Rectangle.png" alt="rectangle"/>
-                  <h5 class="text-white">Frameworks</h5>
+                  <div class="text-white">Frameworks</div>
                 </li>
                 <li class="tech">Bootstrap</li>
                 <li class="tech">Roby on Rails</li>
@@ -197,7 +198,7 @@
               <ul class="technologies">
                 <li class="tech-title">
                   <img src="Skeleton/circle.png" alt="circle"/>
-                  <h5 class="text-white">Skills</h5>
+                  <div class="text-white">Skills</div>
                 </li>
                 <li class="tech">Codekitt</li>
                 <li class="tech">Github</li>
