--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
             <div>
               <ul class="technologies">
                 <li class="tech-title font-inter">
-                  <img src="Skeleton/diamond.png" alt="diamond"/>
-                  <div class="text-white">Languages</div>
+                  <img src="./Skeleton/diamond.png" alt="diamond"/>
+                  <div class="text-white">Language</div>
                 </li>
                 <li class="tech">Javascript</li>
                 <li class="tech">Ruby</li>
