Add Form markup

--- a/index.html
+++ b/index.html
@@ -208,6 +208,17 @@
               </ul>
             </div>
         </section>
+        <section>
+          <h1></h1>
+          <form action="https://formspree.io/f/{form_id}" method="post" >
+            <ul>
+              <li>
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="user_name">
+              </li>
+            </ul>
+          </form>
+        </section>
       
     </main>
   </body>
