--- a/index.html
+++ b/index.html
@@ -216,6 +216,10 @@
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="user_name">
               </li>
+              <li>
+                <label for="mail">E-mail:</label>
+                <input type="email" id="mail" name="user_email">
+              </li>
             </ul>
           </form>
         </section>
