--- a/index.html
+++ b/index.html
@@ -229,27 +229,33 @@
         </div>
       </section>
       <section>
-        <h1></h1>
         <form action="https://formspree.io/f/{form_id}" method="post">
-          <ul>
-            <li>
-              <label for="name">Name:</label>
-              <input type="text" id="name" name="user_name" />
-            </li>
-            <li>
-              <label for="mail">E-mail:</label>
-              <input type="email" id="mail" name="user_email" />
-            </li>
-            <li>
-              <label for="msg">Message:</label>
-              <textarea id="msg" name="user_message"></textarea>
-            </li>
-            <li class="button">
-              <button type="submit">Send your message</button>
-            </li>
-          </ul>
-        </form>
-      </section>
-    </main>
+          <p class="form-detail">I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</p>
+             <input type="text" placeholder="Full Name" maxlength="30" required>
+             <input type="email" placeholder="Email address" required>
+             <textarea name="msgt1" id="t1" cols="30" rows="10" maxlength="500" placeholder="Enter text here" required></textarea>
+          <p>
+            <button class="button" type="submit">Get in touch</button>
+           </p>
+      <footer class="social-footer-social">
+      <a href="#"  class="social-link">
+        <img class="social-icon" src="./icons/github.png" alt="GitHub"/>
+      </a>
+      <a href="#"  class="social-link">
+        <img class="social-icon" src="./icons/Linkedin.png" alt="LinkedIn"/>
+      </a>
+      <a href="#"  class="social-link">
+        <img class="social-icon" src="./icons/angel.png" alt="Angel"/>
+      </a>
+      <a href="#"  class="social-link">
+        <img class="social-icon" src="./icons/twitter.png" alt="Twitter"/>
+      </a>
+      <a href="#"  class="social-link">
+        <img class="social-icon" src="icons/medium.png" alt="Medium"/>
+      </a>
+    </footer>
+  </form>
+</section>
+</main>
   </body>
 </html>
