--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     <header class="header-box">
       <section class="header-content">
         <h1 class="header-title">Hey There. I'm Adaobi</h1>
-        <h2 class="header-subtitle">I’m a Software Developer</h2>
+        <h2 class="header-subtitle">I'm a Software Developer</h2>
         <p class="header-text-description">
           I can help you build a product , feature or website Look through some
           of my work and experience! If you like what you see and have a project
-          you need coded, don’t hestiate to contact me.
+          you need coded, don't hestiate to contact me.
         </p>
         <ul class="social-media">
           <li>
@@ -184,9 +184,9 @@
           <div class="about-soft">
             <h2 class="about-head">About me</h2>
             <p class="hello">
-              Hello I’m a software developer! I can help you build a product ,
+              Hello I'm a software developer! I can help you build a product ,
               feature or website Look through some of my work and experience! If
-              you like what you see and have a project you need coded, don’t
+              you like what you see and have a project you need coded, don't
               hestiate to contact me.
             </p>
             <button class="btn" type="button">Get My Resume</button>
@@ -257,5 +257,5 @@
   </form>
 </section>
 </main>
-  </body>
+</body>
 </html>
