--- a/index.html
+++ b/index.html
@@ -228,8 +228,8 @@
           </ul>
         </div>
       </section>
-      <section>
-        <form action="https://formspree.io/f/{form_id}" method="post">
+      <section class="contact">
+        <form action="https://formspree.io/f/xlezlkyw" method="post">
           <p class="form-detail">I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</p>
              <input type="text" placeholder="Full Name" maxlength="30" required>
              <input type="email" placeholder="Email address" required>
