--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
         <img class="social-icon" src="./icons/twitter.png" alt="Twitter"/>
       </a>
       <a href="#"  class="social-link">
-        <img class="social-icon" src="icons/medium.png" alt="Medium"/>
+        <img class="social-icon" src="./icons/medium.png" alt="Medium"/>
       </a>
     </footer>
   </form>
