--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
           </ul>
         </div>
       </section>
-      <section class="contact">
+  <section class="contact">
         <form action="https://formspree.io/f/xlezlkyw" method="post">
           <p class="form-detail">I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</p>
              <input type="text" placeholder="Full Name" maxlength="30" required>
@@ -237,24 +237,26 @@
           <p>
             <button class="button" type="submit">Get in touch</button>
            </p>
-      <footer class="social-footer-social">
-      <a href="#"  class="social-link">
-        <img class="social-icon" src="./icons/github.png" alt="GitHub"/>
-      </a>
-      <a href="#"  class="social-link">
-        <img class="social-icon" src="./icons/Linkedin.png" alt="LinkedIn"/>
-      </a>
-      <a href="#"  class="social-link">
-        <img class="social-icon" src="./icons/angel.png" alt="Angel"/>
-      </a>
-      <a href="#"  class="social-link">
-        <img class="social-icon" src="./icons/twitter.png" alt="Twitter"/>
-      </a>
-      <a href="#"  class="social-link">
-        <img class="social-icon" src="./icons/medium.png" alt="Medium"/>
-      </a>
-    </footer>
   </form>
+  <footer class="social-footer-social">
+  <div class="social-media-icon1">
+    <a href="#"  class="social-link">
+      <img class="social-icon" src="./icons/github.png" alt="GitHub"/>
+    </a>
+    <a href="#"  class="social-link">
+      <img class="social-icon" src="./icons/Linkedin.png" alt="LinkedIn"/>
+    </a>
+    <a href="#"  class="social-link">
+      <img class="social-icon" src="./icons/angel.png" alt="Angel"/>
+    </a>
+    <a href="#"  class="social-link">
+      <img class="social-icon" src="./icons/twitter.png" alt="Twitter"/>
+    </a>
+    <a href="#"  class="social-link">
+      <img class="social-icon" src="./icons/medium.png" alt="Medium"/>
+    </a>
+  </div>
+  </footer>
 </section>
 </main>
 </body>
