update HTML andCSS

--- a/index.html
+++ b/index.html
@@ -192,8 +192,10 @@
             <button class="btn" type="button">Get My Resume</button>
           </div>
         </div>
+        <div class="about1">
         <hr class="about-separater" />
-        <div>
+      </div>
+        <div class="footer-technologies">
           <ul class="technologies">
             <li class="tech-title font-inter">
               <img src="./Skeleton/diamond.png" alt="diamond" />
@@ -229,7 +231,7 @@
         </div>
       </section>
   <section class="contact">
-  <form action="https://formspree.io/f/xlezlkyw" method="post">
+        <form action="https://formspree.io/f/xlezlkyw" method="post">
           <p class="form-detail">I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</p>
              <input type="text" placeholder="Full Name" maxlength="30" required>
              <input type="email" placeholder="Email address" required>
@@ -253,8 +255,11 @@
       <img class="social-icon" src="./icons/twitter.png" alt="Twitter"/>
     </a>
     <a href="#"  class="social-link">
-    <img class="social-icon" src="./icons/medium.png" alt="Medium"/>
+      <img class="social-icon" src="./icons/medium.png" alt="Medium"/>
     </a>
+  </div>
+  <div class="footer-line-section">
+    <img src="assets/png/footer-line-shape.png" alt="Footer Line Shape" />
   </div>
   </footer>
 </section>
