Update HTML and CSS

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </a>
       </nav>
     </header>
-    <header class="header-box">
+    <section class="about-us">
       <section class="header-content">
         <h1 class="header-title">Hey There. I'm Adaobi</h1>
         <h2 class="header-subtitle">I'm a Software Developer</h2>
@@ -58,13 +58,19 @@
           </li>
         </ul>
       </section>
-    </header>
+    </section>
     <main>
-      <section class="new-container">
+      <header>
         <div class="work-container">
-          <h6 class="recent-work">My Recent Works</h6>
-          <hr class="about-hr" />
+          <div class="recent-work">
+            <h6>My Recent Works</h6>
+          </div>
+          <div class="header-hr">
+            <hr class="about-hr" />
+          </div>
         </div>
+      </header>
+      <section class="new-container">
         <div class="image-p">
           <img
             class="image-placeholder"
@@ -88,19 +94,9 @@
             <button class="project" type="button">See Project</button>
           </div>
         </div>
+      </section>
+      <section class="professional-section">
         <div class="professional-work">
-          <div class="pro-art">
-            <h6 class="art-print">Profesional Art Printing Data</h6>
-            <p class="daily-selection">
-              A daily selection of privately personalized reads; no accounts or
-              sign-ups required. has been the industry's standard
-            </p>
-          </div>
-          <ul class="pro-tag">
-            <li class="pro-h">html</li>
-            <li class="pro-h">bootstrap</li>
-            <li class="pro-h">Ruby</li>
-          </ul>
           <button class="see-proj" type="button">See Project</button>
         </div>
         <div class="professional-work">
@@ -110,13 +106,12 @@
               A daily selection of privately personalized reads; no accounts or
               sign-ups required. has been the industry's standard
             </p>
+            <ul class="pro-tag">
+              <li class="pro-h">html</li>
+              <li class="pro-h">bootstrap</li>
+              <li class="pro-h">Ruby</li>
+            </ul>
           </div>
-          <ul class="pro-tag">
-            <li class="pro-h">html</li>
-            <li class="pro-h">bootstrap</li>
-            <li class="pro-h">Ruby</li>
-          </ul>
-          <button class="see-proj" type="button">See Project</button>
         </div>
         <div class="professional-work">
           <div class="pro-art">
@@ -125,13 +120,12 @@
               A daily selection of privately personalized reads; no accounts or
               sign-ups required. has been the industry's standard
             </p>
+            <ul class="pro-tag">
+              <li class="pro-h">html</li>
+              <li class="pro-h">bootstrap</li>
+              <li class="pro-h">Ruby</li>
+            </ul>
           </div>
-          <ul class="pro-tag">
-            <li class="pro-h">html</li>
-            <li class="pro-h">bootstrap</li>
-            <li class="pro-h">Ruby</li>
-          </ul>
-          <button class="see-proj" type="button">See Project</button>
         </div>
         <div class="professional-work">
           <div class="pro-art">
@@ -140,13 +134,12 @@
               A daily selection of privately personalized reads; no accounts or
               sign-ups required. has been the industry's standard
             </p>
+            <ul class="pro-tag">
+              <li class="pro-h">html</li>
+              <li class="pro-h">bootstrap</li>
+              <li class="pro-h">Ruby</li>
+            </ul>
           </div>
-          <ul class="pro-tag">
-            <li class="pro-h">html</li>
-            <li class="pro-h">bootstrap</li>
-            <li class="pro-h">Ruby</li>
-          </ul>
-          <button class="see-proj" type="button">See Project</button>
         </div>
         <div class="professional-work">
           <div class="pro-art">
@@ -155,13 +148,12 @@
               A daily selection of privately personalized reads; no accounts or
               sign-ups required. has been the industry's standard
             </p>
+            <ul class="pro-tag">
+              <li class="pro-h">html</li>
+              <li class="pro-h">bootstrap</li>
+              <li class="pro-h">Ruby</li>
+            </ul>
           </div>
-          <ul class="pro-tag">
-            <li class="pro-h">html</li>
-            <li class="pro-h">bootstrap</li>
-            <li class="pro-h">Ruby</li>
-          </ul>
-          <button class="see-proj" type="button">See Project</button>
         </div>
         <div class="professional-work">
           <div class="pro-art">
@@ -170,13 +162,12 @@
               A daily selection of privately personalized reads; no accounts or
               sign-ups required. has been the industry's standard
             </p>
+            <ul class="pro-tag">
+              <li class="pro-h">html</li>
+              <li class="pro-h">bootstrap</li>
+              <li class="pro-h">Ruby</li>
+            </ul>
           </div>
-          <ul class="pro-tag">
-            <li class="pro-h">html</li>
-            <li class="pro-h">bootstrap</li>
-            <li class="pro-h">Ruby</li>
-          </ul>
-          <button class="see-proj" type="button">See Project</button>
         </div>
       </section>
       <section class="about">
@@ -193,8 +184,8 @@
           </div>
         </div>
         <div class="about1">
-        <hr class="about-separater" />
-      </div>
+          <hr class="about-separater" />
+        </div>
         <div class="footer-technologies">
           <ul class="technologies">
             <li class="tech-title font-inter">
@@ -208,7 +199,7 @@
           </ul>
           <ul class="technologies">
             <li class="tech-title">
-              <img src="Skeleton/Rectangle.png" alt="rectangle" />
+              <img src="./Skeleton/Rectangle.png" alt="rectangle" />
               <div class="text-white">Frameworks</div>
             </li>
             <li class="tech">Bootstrap</li>
@@ -219,7 +210,7 @@
           </ul>
           <ul class="technologies">
             <li class="tech-title">
-              <img src="Skeleton/circle.png" alt="circle" />
+              <img src="./Skeleton/circle.png" alt="circle" />
               <div class="text-white">Skills</div>
             </li>
             <li class="tech">Codekitt</li>
@@ -230,39 +221,67 @@
           </ul>
         </div>
       </section>
-  <section class="contact">
-        <form action="https://formspree.io/f/xlezlkyw" method="post">
-          <p class="form-detail">I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</p>
-             <input type="text" placeholder="Full Name" maxlength="30" required>
-             <input type="email" placeholder="Email address" required>
-             <textarea name="msgt1" id="t1" cols="30" rows="10" maxlength="500" placeholder="Enter text here" required></textarea>
+      <section class="contact">
+        <div class="form-detail">
           <p>
-            <button class="button" type="submit">Get in touch</button>
-           </p>
-  </form>
-  <footer class="social-footer-social">
-  <div class="social-media-icon1">
-    <a href="#"  class="social-link">
-      <img class="social-icon" src="./icons/github.png" alt="GitHub"/>
-    </a>
-    <a href="#"  class="social-link">
-      <img class="social-icon" src="./icons/Linkedin.png" alt="LinkedIn"/>
-    </a>
-    <a href="#"  class="social-link">
-      <img class="social-icon" src="./icons/angel.png" alt="Angel"/>
-    </a>
-    <a href="#"  class="social-link">
-      <img class="social-icon" src="./icons/twitter.png" alt="Twitter"/>
-    </a>
-    <a href="#"  class="social-link">
-      <img class="social-icon" src="./icons/medium.png" alt="Medium"/>
-    </a>
-  </div>
-  <div class="footer-line-section">
-    <img src="assets/png/footer-line-shape.png" alt="Footer Line Shape" />
-  </div>
-  </footer>
-</section>
-</main>
-</body>
+            I'm always interested in hearing about new projects, so if you'd
+            like to chat please get in touch.
+          </p>
+        </div>
+        <div class="contact-form">
+          <form
+            action="https://formspree.io/f/xlezlkyw"
+            method="post"
+            class="contact-us"
+          >
+            <input
+              type="text"
+              placeholder="Full Name"
+              maxlength="30"
+              required
+            />
+            <input type="email" placeholder="Email address" required />
+            <textarea
+              name="msgt1"
+              id="t1"
+              cols="30"
+              rows="10"
+              maxlength="500"
+              placeholder="Enter text here"
+              required
+            ></textarea>
+            <p>
+              <button class="button" type="submit">Get in touch</button>
+            </p>
+          </form>
+        </div>
+      </section>
+      <footer class="social-footer-social">
+        <div class="social-media-icon1">
+          <a href="#" class="social-link">
+            <img class="social-icon" src="./icons/github.png" alt="GitHub" />
+          </a>
+          <a href="#" class="social-link">
+            <img
+              class="social-icon"
+              src="./icons/Linkedin.png"
+              alt="LinkedIn"
+            />
+          </a>
+          <a href="#" class="social-link">
+            <img class="social-icon" src="./icons/angel.png" alt="Angel" />
+          </a>
+          <a href="#" class="social-link">
+            <img class="social-icon" src="./icons/twitter.png" alt="Twitter" />
+          </a>
+          <a href="#" class="social-link">
+            <img class="social-icon" src="./icons/medium.png" alt="Medium" />
+          </a>
+        </div>
+        <div class="footer-line-section">
+          <img src="assets/png/footer-line-shape.png" alt="Footer Line Shape" />
+        </div>
+      </footer>
+    </main>
+  </body>
 </html>
