update HTML and CSS

--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
     <header>
       <nav class="container">
         <a href="#" class="navbar-logo">Adaobi Okoye</a>
+        <a href="#" class="navbar-btn">
+          <ul class="navbar-desk">
+           <li class="navbar-link">Portfolio</li>
+           <li class="navbar-link">About</li>
+           <li class="navbar-link">Contact</li>
+           <li class="navbar-link"><img src="./icons/Union (2).png" alt="Email" class="text-white"/></li>
+          </ul>
         <a href="#" class="navbar-menu">
           <img src="./icons/Union.png" alt="Menu" />
         </a>
@@ -29,29 +36,29 @@
         <ul class="social-media">
           <li>
             <a href="#" class="social-media-icon">
-              <img src="./icons/github.png" alt="Github" />
+              <img src="./icons/github (2).png" alt="Github" />
             </a>
           </li>
           <li>
             <a href="#" class="social-media-icon">
-              <img src="icons/Linkedin.png" alt="Linkedin" />
+              <img src="icons/Linkedin (2).png" alt="Linkedin" />
             </a>
           </li>
           <li>
             <a href="#" class="social-media-icon">
-              <img src="./icons/angel.png" alt="Angel" />
+              <img src="./icons/angel (2).png" alt="Angel" />
             </a>
           </li>
           <li>
             <a href="#" class="social-media-icon">
-              <img src="./icons/twitter.png" alt="Twitter" />
+              <img src="./icons/twitter (2).png" alt="Twitter" />
             </a>
           </li>
           <li>
             <a href="#" class="social-media-medium-icon">
               <img
                 class="image-correction"
-                src="./icons/medium.png"
+                src="./icons/medium (2).png"
                 alt="Medium"
               />
             </a>
@@ -74,7 +81,7 @@
         <div class="image-p">
           <img
             class="image-placeholder"
-            src="Skeleton/placeholder.png"
+            src="./Skeleton/placeholder.png"
             alt="place holder"
           />
           <div class="multi">
@@ -257,6 +264,9 @@
         </div>
       </section>
       <footer class="social-footer-social">
+        <div class="foot">
+          <hr class="foot-separater" />
+        </div>
         <div class="social-media-icon1">
           <a href="#" class="social-link">
             <img class="social-icon" src="./icons/github.png" alt="GitHub" />
@@ -272,7 +282,7 @@
             <img class="social-icon" src="./icons/angel.png" alt="Angel" />
           </a>
           <a href="#" class="social-link">
-            <img class="social-icon" src="./icons/twitter.png" alt="Twitter" />
+            <img class="social-icon" src="./icons/Twitter.png" alt="Twitter" />
           </a>
           <a href="#" class="social-link">
             <img class="social-icon" src="./icons/medium.png" alt="Medium" />
