update HTML and CSS

--- a/index.html
+++ b/index.html
@@ -36,29 +36,29 @@
         <ul class="social-media">
           <li>
             <a href="#" class="social-media-icon">
-              <img src="./icons/github (2).png" alt="Github" />
+              <img src="./icons/githu.png" alt="Github" />
             </a>
           </li>
           <li>
             <a href="#" class="social-media-icon">
-              <img src="icons/Linkedin (2).png" alt="Linkedin" />
+              <img src="./icons/Linked.png" alt="Linkedin" />
             </a>
           </li>
           <li>
             <a href="#" class="social-media-icon">
-              <img src="./icons/angel (2).png" alt="Angel" />
+              <img src="./icons/ang.png" alt="Angel" />
             </a>
           </li>
           <li>
             <a href="#" class="social-media-icon">
-              <img src="./icons/twitter (2).png" alt="Twitter" />
+              <img src="./icons/twi.png" alt="Twitter" />
             </a>
           </li>
           <li>
             <a href="#" class="social-media-medium-icon">
               <img
                 class="image-correction"
-                src="./icons/medium (2).png"
+                src="./icons/med.png"
                 alt="Medium"
               />
             </a>
