--- a/index.html
+++ b/index.html
@@ -14,11 +14,14 @@
         <a href="#" class="navbar-logo">Adaobi Okoye</a>
         <a href="#" class="navbar-btn">
           <ul class="navbar-desk">
-           <li class="navbar-link">Portfolio</li>
-           <li class="navbar-link">About</li>
-           <li class="navbar-link">Contact</li>
-           <li class="navbar-link"><img src="./icons/Union (2).png" alt="Email" class="text-white"/></li>
+            <li class="navbar-link">Portfolio</li>
+            <li class="navbar-link">About</li>
+            <li class="navbar-link">Contact</li>
+            <li class="navbar-link">
+              <img src="./icons/Uni.png" alt="Email" class="text-white" />
+            </li>
           </ul>
+        </a>
         <a href="#" class="navbar-menu">
           <img src="./icons/Union.png" alt="Menu" />
         </a>
