--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
             <img class="social-icon" src="./icons/angel.png" alt="Angel" />
           </a>
           <a href="#" class="social-link">
-            <img class="social-icon" src="./icons/Twitter.png" alt="Twitter" />
+            <img class="social-icon" src="./icons/twitter.png" alt="Twitter" />
           </a>
           <a href="#" class="social-link">
             <img class="social-icon" src="./icons/medium.png" alt="Medium" />
