Add quit_image at icons folder

--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
         </a>
       </nav>
     </header>
+    <div class="mobile-menu">
+      <div><img src="./icons/quit_image.png"></div>
+      <ul>
+        <li>Portfolio</li>
+        <li>About</li>
+        <li>Contact</li>
+      </ul>
+    </div>
     <section class="about-us">
       <section class="header-content">
         <h1 class="header-title">Hey There. I'm Adaobi</h1>
