Add styles to nobile menu

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       </nav>
     </header>
     <div class="mobile-menu">
-      <div><img src="./icons/quit_image.png"></div>
-      <ul>
+      <div class="mobile-menu-image"><img src="./icons/quit_image.png"></div>
+      <ul class="mobile-menu-list">
         <li>Portfolio</li>
         <li>About</li>
         <li>Contact</li>
