--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </nav>
     </header>
     <div class="mobile-menu">
-      <div class="mobile-menu-image"><img src="./icons/quit_image.png"></div>
+      <div class="mobile-menu-image" onclick="toggle()"><img id="hamburger-btn" src="./icons/quit_image.png"></div>
       <ul class="mobile-menu-list">
         <li>Portfolio</li>
         <li>About</li>
@@ -301,5 +301,6 @@
         </div>
       </footer>
     </main>
+    <script src="index.js"></script>
   </body>
 </html>
